syntax = "proto3";
package api;

import "item.proto";
import "groupkey.proto";

message ContentsDefinition {
  repeated GroupKey group_keys = 1;
  repeated Item items = 2;
}
